--- a/FlashVocab.xcodeproj/xcshareddata/xcschemes/FlashVocab.xcscheme
+++ b/FlashVocab.xcodeproj/xcshareddata/xcschemes/FlashVocab.xcscheme
@@ -31,8 +31,8 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Release"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       language = "tr"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
