--- a/FlashVocab/Info.plist
+++ b/FlashVocab/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>LSMinimumSystemVersion</key>
+	<string>14.4</string>
 </dict>
 </plist>
